<resources>
    <string name="app_name">Local Forecast-Check Weather</string>
<!--    <string name="AD_MOB_APPLICATION_ID">ca-app-pub-3940256099942544~3347511713</string>-->
    <string name="AD_MOB_APPLICATION_ID">ca-app-pub-3914933936918934~7557887869</string>
    <string name="no_geocoder_available">No GeoCoder available</string>
    <string name="fetch_address">Fetch address</string>
    <string name="address_found">Address found</string>

    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>

    <string name="permission_rationale">Location permission is needed to show your current weather.</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed to show your current weather.</string>
    <string name="settings">Settings</string>
    <string name="exit_confirmation">Are you sure want to exit?</string>
    <!--Ads -->
    <!--testing ids-->
<!--    <string name="app_id">ca-app-pub-3940256099942544~3347511713</string>-->
<!--    <string name="ads_native">ca-app-pub-3940256099942544/2247696110</string>-->
<!--    <string name="interstail">ca-app-pub-3940256099942544/1033173712</string>-->
<!--read ids-->
    <string name="app_id">ca-app-pub-3914933936918934~7557887869</string>
    <string name="ads_native">ca-app-pub-3914933936918934/5877974685</string>
    <string name="interstail">ca-app-pub-3914933936918934/7439959051</string>
    <!--Navigation Menu-->
    <string name="nav_weather">Weather</string>
    <string name="nav_live_weather">Live Weather</string>
    <!--    <string name="nav_rain_fall_forecast">Rainfall Forecast</string>-->
    <string name="nav_rain_fall_forecast">Wind Speed</string>
    <string name="nav_temp_forecast">Temperature Forecast</string>
    <string name="nav_weather_map">Weather Map</string>
    <string name="nav_share">Share</string>
    <string name="nav_rate">Rate Us</string>
    <string name="nav_feed_back">Feedback</string>
    <string name="nav_more_app">More App</string>
    <string name="nav_exit">Exit</string>

    <!--City Weather-->
    <string name="hint_sun_rise">Sunrise</string>
    <string name="hint_sun_set">Sunset</string>
    <string name="hint_pressure">Pressure</string>
    <string name="hint_visibility">Visibility</string>
    <string name="hint_humidity">Humidity</string>


    <string name="no_data_found">No data found</string>
    <string name="select_city">Select City</string>
    <string name="search_here">Search Here</string>
    <string name="msgNoInternet">Please turn on internet connection to continue.</string>
    <string name="ok">Ok</string>

</resources>
